feat: watch-progress, resume playback
